camel-smpp: fixed deprecation warnings